--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="keywords" content="7 Style, INTUITIVE">
     <meta name="description" content="">
     <meta name="page_type" content="np-template-header-footer-from-plugin">
-    <title>Home</title>
+    <title>My Website</title>
     <link rel="stylesheet" href="nicepage.css" media="screen">
 <link rel="stylesheet" href="Home.css" media="screen">
     <script class="u-script" type="text/javascript" src="jquery.js" defer=""></script>
@@ -30,7 +30,7 @@
   </head>
   <body data-home-page="Home.html" data-home-page-title="Home" class="u-body u-overlap u-overlap-contrast u-overlap-transparent"><header class="u-clearfix u-header u-sticky u-sticky-5284 u-header" id="sec-ee94"><div class="u-clearfix u-sheet u-valign-bottom-lg u-valign-bottom-xl u-sheet-1">
         <a href="https://nicepage.com" class="u-image u-logo u-image-1" data-image-width="666" data-image-height="375">
-          <img src="images/Fevicon.png" class="u-logo-image u-logo-image-1">
+          <img src="Fevicon.png" class="u-logo-image u-logo-image-1">
         </a>
         <nav class="u-menu u-menu-dropdown u-offcanvas u-menu-1">
           <div class="menu-collapse" style="font-size: 1rem; letter-spacing: 0px;">
@@ -65,8 +65,7 @@
     <section class="u-align-center u-clearfix u-image u-shading u-section-1" src="" data-image-width="1200" data-image-height="1600" id="sec-a59b">
       <div class="u-clearfix u-sheet u-sheet-1">
         <h1 class="u-text u-text-default u-title u-text-1">HELLO!<br>
-          <span style="font-weight: 400;">KRISHN</span>
-          <span style="font-weight: 400;">AN HERE</span>
+          <span style="font-weight: 400;">KRISHNAN HERE</span>
         </h1>
         <p class="u-large-text u-text u-text-default u-text-variant u-text-2">Student at MES college kuttipuram. This is my official page.</p>
         <a href="#" class="u-btn u-button-style u-hidden-lg u-hidden-md u-hidden-sm u-hidden-xl u-palette-2-base u-btn-1">&nbsp;&nbsp;<br>
@@ -123,7 +122,7 @@
           <div class="u-carousel-inner u-gallery-inner" role="listbox">
             <div class="u-active u-carousel-item u-effect-fade u-gallery-item u-carousel-item-1">
               <div class="u-back-slide" data-image-width="1366" data-image-height="622">
-                <img class="u-back-image u-expanded" src="images/web.png" alt="Build.myweb">
+                <img class="u-back-image u-expanded" src="web.png" alt="Build.myweb">
               </div>
               <div class="u-align-center u-over-slide u-shading u-valign-bottom u-over-slide-1">
                 <h3 class="u-gallery-heading">Build.myweb</h3>
@@ -132,7 +131,7 @@
             </div>
             <div class="u-carousel-item u-effect-fade u-gallery-item u-carousel-item-2">
               <div class="u-back-slide" data-image-width="3840" data-image-height="2160">
-                <img class="u-back-image u-expanded" src="images/Blackhole.jpg" alt="Procedural Black Hole">
+                <img class="u-back-image u-expanded" src="Blackhole.jpg" alt="Procedural Black Hole">
               </div>
               <div class="u-align-center u-over-slide u-shading u-valign-bottom u-over-slide-2">
                 <h3 class="u-gallery-heading">Procedural Black Hole</h3>
@@ -141,7 +140,7 @@
             </div>
             <div class="u-carousel-item u-effect-fade u-gallery-item u-carousel-item-3" data-image-width="1920" data-image-height="1080">
               <div class="u-back-slide">
-                <img class="u-back-image u-expanded" src="images/Stupidstarwars.jpg" alt="Prodecural....Something :)">
+                <img class="u-back-image u-expanded" src="Stupidstarwars.jpg" alt="Prodecural....Something :)">
               </div>
               <div class="u-align-center u-over-slide u-shading u-valign-bottom u-over-slide-3">
                 <h3 class="u-gallery-heading">Prodecural....Something :)</h3>
