--- a/Home.html
+++ b/Home.html
@@ -6,7 +6,7 @@
     <meta name="keywords" content="7 Style, INTUITIVE">
     <meta name="description" content="">
     <meta name="page_type" content="np-template-header-footer-from-plugin">
-    <title>Home</title>
+    <title>My Website</title>
     <link rel="stylesheet" href="nicepage.css" media="screen">
 <link rel="stylesheet" href="Home.css" media="screen">
     <script class="u-script" type="text/javascript" src="jquery.js" defer=""></script>
@@ -30,7 +30,7 @@
   </head>
   <body class="u-body u-overlap u-overlap-contrast u-overlap-transparent"><header class="u-clearfix u-header u-sticky u-sticky-5284 u-header" id="sec-ee94"><div class="u-clearfix u-sheet u-valign-bottom-lg u-valign-bottom-xl u-sheet-1">
         <a href="https://nicepage.com" class="u-image u-logo u-image-1" data-image-width="666" data-image-height="375">
-          <img src="images/Fevicon.png" class="u-logo-image u-logo-image-1">
+          <img src="Fevicon.png" class="u-logo-image u-logo-image-1">
         </a>
         <nav class="u-menu u-menu-dropdown u-offcanvas u-menu-1">
           <div class="menu-collapse" style="font-size: 1rem; letter-spacing: 0px;">
@@ -123,7 +123,7 @@
           <div class="u-carousel-inner u-gallery-inner" role="listbox">
             <div class="u-active u-carousel-item u-effect-fade u-gallery-item u-carousel-item-1">
               <div class="u-back-slide" data-image-width="1366" data-image-height="622">
-                <img class="u-back-image u-expanded" src="images/web.png" alt="Build.myweb">
+                <img class="u-back-image u-expanded" src="web.png" alt="Build.myweb">
               </div>
               <div class="u-align-center u-over-slide u-shading u-valign-bottom u-over-slide-1">
                 <h3 class="u-gallery-heading">Build.myweb</h3>
@@ -132,7 +132,7 @@
             </div>
             <div class="u-carousel-item u-effect-fade u-gallery-item u-carousel-item-2">
               <div class="u-back-slide" data-image-width="3840" data-image-height="2160">
-                <img class="u-back-image u-expanded" src="images/Blackhole.jpg" alt="Procedural Black Hole">
+                <img class="u-back-image u-expanded" src="Blackhole.jpg" alt="Procedural Black Hole">
               </div>
               <div class="u-align-center u-over-slide u-shading u-valign-bottom u-over-slide-2">
                 <h3 class="u-gallery-heading">Procedural Black Hole</h3>
@@ -141,7 +141,7 @@
             </div>
             <div class="u-carousel-item u-effect-fade u-gallery-item u-carousel-item-3" data-image-width="1920" data-image-height="1080">
               <div class="u-back-slide">
-                <img class="u-back-image u-expanded" src="images/Stupidstarwars.jpg" alt="Prodecural....Something :)">
+                <img class="u-back-image u-expanded" src="Stupidstarwars.jpg" alt="Prodecural....Something :)">
               </div>
               <div class="u-align-center u-over-slide u-shading u-valign-bottom u-over-slide-3">
                 <h3 class="u-gallery-heading">Prodecural....Something :)</h3>
