--- a/Home.html
+++ b/Home.html
@@ -62,7 +62,7 @@
           </div>
         </nav>
       </div></header>
-    <section class="u-align-center u-clearfix u-image u-shading u-section-1" src="" data-image-width="1200" data-image-height="1600" id="sec-a59b">
+    <section class="u-align-center u-clearfix u-image u-shading u-section-1" src="my_photo.jpeg" data-image-width="1200" data-image-height="1600" id="sec-a59b">
       <div class="u-clearfix u-sheet u-sheet-1">
         <h1 class="u-text u-text-default u-title u-text-1">HELLO!<br>
           <span style="font-weight: 400;">KRISHN</span>
